<resources>
    <string name="app_name">Reidx</string>

    <string name="action_speech">Speech</string>
    <string name="action_websearch">Web Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_privacy">Privacy</string>
    <string name="action_bugs">Report Bugs</string>

    <string name="accept">Accept</string>

    <string name="authentication_login_error_email_empty">Enter Email</string>
    <string name="authentication_login_error_password_empty">Enter Password</string>
    <string name="authentication_credentials_wrong">Authentication failed, check your email and password or sign up</string>
    <string name="authentication_reset_error_email_empty">Enter Email</string>
    <string name="authentication_sign_up_error_email_empty">Enter Email</string>
    <string name="authentication_sign_up_error_password_empty">Enter Password</string>

    <string name="button_back">Back</string>
    <string name="button_login">Login</string>
    <string name="button_reset_password">Reset Password</string>
    <string name="button_change">Change</string>
    <string name="button_forgot_password">Forgot your password?</string>
    <string name="button_send">Send</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="button_remove">Remove</string>
    <string name="button_create_account">Create Account</string>


    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="btn_logout">LOGOUT</string>

    <string name="change_theme_key">change_theme_key</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="dialog_title_list_theme">Choose Theme Color</string>

    <string name="error_timeout">Oops! Your Connection Timed Out</string>
    <string name="error_auth_failure">Oops! It Doesn\'t Recognize You</string>
    <string name="error_network">Oops! Server Just Messed Up</string>
    <string name="error_parser">Oops! Data Received Was An Unreadable Mess</string>
    <string name="error_invalid_email">Invalid Email Address</string>
    <string name="error_password_too_short">Password To Short</string>
    <string name="error_enter_username">Enter Username</string>

    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_repassword">Re Type Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>

    <string name="name">Full Name</string>

    <string name="title_fonts_appearances">Fonts and Appearances</string>
    <string name="title_wifi_data">Wifi and Data</string>
    <string name="title_notifications">Notifications</string>

    <string name="theme_title_change">Change Theme Colors</string>
    <string name="theme_title_list_dialog">Choose Theme Color</string>
    <string name="theme_summary">Change the primary, primary dark and accent colors</string>

    <string name="data_title">Only Update Data Wi-Fi</string>
    <string name="data_summary_on">Only update data etc. over Wi-Fi</string>
    <string name="data_summary_off">Update over Wi-Fi and Data Plan</string>

    <string name="about_title">About Version</string>
    <string name="about_summary">Help, Terms of Service, Privacy Policy, Cookies Use</string>

    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>

    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>

    <string name="pref_title_change_theme">Change App Theme</string>

    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>

    <string name="pref_update_setting">Update Settings</string>


    <string name="title_activity_deal_analyzer">Deal Analyzer</string>
    <string name="title_activity_register">Register</string>

    <string name="search_hint">Search Program</string>
    <string name="search_title">Search</string>

    <string name="summary_list_theme">Press to Change the primary, primary dark and accent colors</string>

    <string name="username_error">enter a valid email address</string>
    <string name="password_error">between 4 and 10 alphanumeric characters</string>

    <string name="page_deals">Deals</string>
    <string name="page_favourites">Favourites</string>
    <string name="page_my_deals">My Deals</string>

    <string name="login_failed">Login failed.</string>

    <string name="textview_user_first_Last_name">Brian Donaldson</string>
    <string name="textview_user_email">bdonaldsca@gmail.com</string>
    <string name="textview_sign_up">Not a member? Get registered</string>
    <string name="textview_forgot_password">Forgot Your Password?</string>
    <string name="textview_no_account">Don\'t have an account?</string>
    <string name="textview_to_login">Already Registered. Login Me!</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_login">Login</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--feed-->
    <string name="deals">Deals</string>
    <string name="favorite">Favourites</string>
    <string name="myDeals">My Deals</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>

    <string name="error_empty_input">Inputs may not be Empty</string>
    <string name="error_password_too_long">Password too long</string>

    <!--Login Validation-->
    <string name="empty_email">Please provide a non empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>
    <string name="blog">Blog</string>
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>

</resources>
